--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,10 @@
 #     artifact-name: corne_left_with_logging
 #
 ---
+include:
+  - board: nice_nano_v2
+    shield: vulpes_minora_left
+  - board: nice_nano_v2
+    shield: vulpes_minora_right
+  - board: nice_nano_v2
+    shield: settings_reset
