--- a/config/west.yml
+++ b/config/west.yml
@@ -4,10 +4,21 @@ manifest:
       url-base: https://github.com/zmkfirmware
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: sadekbaroudi
+      url-base: https://github.com/sadekbaroudi
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
+    - name: zmk-fingerpunch-keyboards
+      remote: sadekbaroudi
+      revision: main
+    - name: zmk-fingerpunch-vik
+      remote: sadekbaroudi
+      revision: main
+    - name: zmk-fingerpunch-controllers
+      remote: sadekbaroudi
+      revision: main
   self:
     path: config
