--- a/config/west.yml
+++ b/config/west.yml
@@ -6,10 +6,12 @@ manifest:
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
     - name: sadekbaroudi
       url-base: https://github.com/sadekbaroudi
+    - name: caksoylar
+      url-base: https://github.com/caksoylar
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: caksoylar
+      revision: caksoylar/experimental
       import: app/west.yml
     - name: zmk-fingerpunch-keyboards
       remote: sadekbaroudi
