--- a/config/west.yml
+++ b/config/west.yml
@@ -16,11 +16,6 @@ manifest:
     - name: zmk-fingerpunch-keyboards
       remote: sadekbaroudi
       revision: main
-    - name: zmk-fingerpunch-vik
-      remote: sadekbaroudi
-      revision: main
-    - name: zmk-fingerpunch-controllers
-      remote: sadekbaroudi
-      revision: main
+      import: config/deps.yml
   self:
     path: config
