--- a/build.yaml
+++ b/build.yaml
@@ -24,3 +24,5 @@ include:
     shield: vulpes_minora_right
   - board: nice_nano_v2
     shield: settings_reset
+  - board: corneish_zen_v2_left
+  - board: corneish_zen_v2_right
