try via _left.conf

--- a/config/vulpes_minora_left.conf
+++ b/config/vulpes_minora_left.conf
@@ -1,3 +1,7 @@
+# make the left side the central
+CONFIG_ZMK_KEYBOARD_NAME="vulpes left"
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+
 # 15 min sleep timeout
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
