--- a/build.yaml
+++ b/build.yaml
@@ -23,12 +23,12 @@ include:
   - board: nice_nano_v2
     shield: vulpes_minora_right
   - board: nice_nano_v2
-    shield: settings_reset
-  - board: corneish_zen_v2_left
-  - board: corneish_zen_v2_right
-  - board: seeeduino_xiao_ble
-    shield: bad_wings
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
-  - board: seeeduino_xiao_rp2040
-    shield: bad_wings
+#    shield: settings_reset
+#  - board: corneish_zen_v2_left
+#  - board: corneish_zen_v2_right
+#  - board: seeeduino_xiao_ble
+#    shield: bad_wings
+#  - board: seeeduino_xiao_ble
+#    shield: settings_reset
+#  - board: seeeduino_xiao_rp2040
+#    shield: bad_wings
