--- a/build.yaml
+++ b/build.yaml
@@ -22,7 +22,7 @@ include:
     shield: vulpes_minora_left
   - board: nice_nano_v2
     shield: vulpes_minora_right
-  - board: nice_nano_v2
+#  - board: nice_nano_v2
 #    shield: settings_reset
 #  - board: corneish_zen_v2_left
 #  - board: corneish_zen_v2_right
