--- a/build.yaml
+++ b/build.yaml
@@ -19,11 +19,15 @@
 ---
 include:
   - board: nice_nano_v2
+    shield: settings_reset
+  - board: nice_nano_v2
     shield: vulpes_minora_left
   - board: nice_nano_v2
     shield: vulpes_minora_right
   - board: nice_nano_v2
-    shield: settings_reset
+    shield: swweeep_left nice_view_adapter nice_view
+  - board: nice_nano_v2
+    shield: swweeep_right
   - board: corneish_zen_v2_left
   - board: corneish_zen_v2_right
   - board: seeeduino_xiao_ble
