--- a/config/vulpes_minora.conf
+++ b/config/vulpes_minora.conf
@@ -1,6 +1,9 @@
-# 15 min sleep timeout
+# 30 min sleep timeout
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # enable mouse keys
 CONFIG_ZMK_MOUSE=y
+
+# enable soft off
+CONFIG_ZMK_PM_SOFT_OFF=y
