--- a/config/includes/3x5_3.dtsi
+++ b/config/includes/3x5_3.dtsi
@@ -1,6 +1,7 @@
 #include <behaviors.dtsi>
 #include <dt-bindings/zmk/keys.h>
 #include <dt-bindings/zmk/bt.h>
+#include <dt-bindings/zmk/outputs.h>
 
 // define layers
 #define _DEFAULT 0  // Colemak Dhm
@@ -71,10 +72,10 @@
         sticky_layer {
             label = "LEADER";
             bindings = <
-    &kp OS_LOCK  &none     &none  &none  &none      &none  &none  &none  &none  &bt BT_CLR
-    &none        &kp SNIP  &none  &none  &none      &bt BT_PRV &bt BT_SEL 0 &bt BT_SEL 1 &bt BT_SEL 2 &bt BT_NXT
-    &bootloader  &none     &none  &none  &none      SOFT_OFF   &none  &none  &none  &bootloader
-                           &none  &none  &none      &none  &none  &none
+    &kp OS_LOCK  &none     &none  &out OUT_USB  &out OUT_BLE      &none  &none  &none  &none  &bt BT_CLR
+    &none        &kp SNIP  &none  &none         &none             &bt BT_PRV &bt BT_SEL 0 &bt BT_SEL 1 &bt BT_SEL 2 &bt BT_NXT
+    &bootloader  &none     &none  &none         &none             SOFT_OFF   &none  &none  &none  &bootloader
+                           &none  &none         &none             &none  &none  &none
             >;
         };
 
