update deep sleep settings

--- a/config/bad_wings.conf
+++ b/config/bad_wings.conf
@@ -1,3 +1,7 @@
 CONFIG_SPI=y
 CONFIG_ZMK_MOUSE=y
 CONFIG_INPUT_PINNACLE=y
+
+# 30 min sleep timeout
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
