--- a/config/swweeep_left.conf
+++ b/config/swweeep_left.conf
@@ -1,2 +1,6 @@
 # undo left side as default central side
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+
+# 30 min sleep timeout
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
