--- a/config/west.yml
+++ b/config/west.yml
@@ -10,6 +10,8 @@ manifest:
       url-base: https://github.com/caksoylar
     - name: infused-kim
       url-base: https://github.com/infused-kim
+    - name: badjeff
+      url-base: https://github.com/badjeff
   projects:
     - name: zmk
       remote: caksoylar
@@ -24,6 +26,9 @@ manifest:
       revision: main
     - name: zmk-rgbled-widget
       remote: caksoylar
+      revision: main
+    - name: zmk-behavior-insomnia
+      remote: badjeff
       revision: main
   self:
     path: config
