temp hack: middle click scroll via hammerspoon

--- a/config/includes/3x5_3.dtsi
+++ b/config/includes/3x5_3.dtsi
@@ -89,7 +89,7 @@
     &kp LCTRL  &none     &kp WRP_7 &kp WRP_8 &kp WRP_9      &msc SCRL_LEFT  &msc SCRL_DOWN  &msc SCRL_UP  &msc SCRL_RIGHT  &none
     &kp LSHIFT &kp LALT  &kp WRP_4 &kp WRP_5 &kp WRP_6      &mmv MOVE_LEFT  &mmv MOVE_DOWN  &mmv MOVE_UP  &mmv MOVE_RIGHT  &to _DEFAULT
     &kp LGUI   &none     &kp WRP_1 &kp WRP_2 &kp WRP_3      &kp FCS_L  &kp WK_L  &kp EXPOSE  &kp WK_R  &kp FCS_R
-                         &none  &none  &none      &mkp LCLK  &mkp RCLK  &to _DEFAULT
+                         &none     &none     &none          &mkp LCLK  &mkp MCLK &mkp RCLK
             >;
         };
     #endif
