--- a/build.yaml
+++ b/build.yaml
@@ -28,6 +28,10 @@ include:
     shield: swweeep_left nice_view_adapter nice_view
   - board: nice_nano_v2
     shield: swweeep_right
+  - board: nice_nano_v2
+    shield: menura_left
+  - board: nice_nano_v2
+    shield: menura_right
   - board: corneish_zen_v2_left
   - board: corneish_zen_v2_right
   - board: seeeduino_xiao_ble
