switch to a pre-studio branch for menura (compatiblity with Kim TP ZMK remote)

--- a/config/west.yml
+++ b/config/west.yml
@@ -34,6 +34,6 @@ manifest:
       revision: main
     - name: zmk-keyboards-menura
       remote: rmuraglia
-      revision: main
+      revision: no-studio
   self:
     path: config
